footer section add

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                 </div>
             </div>
         </section>
+        <!-- positive mindset is start -->
         <section class="positive-mindset">
             <div class="overlay"></div>
             <div class="pm-text">
@@ -82,11 +83,29 @@
                 ">Awlays keep a positive <br> mindset</h2> <br>
                 <button class="btn-white">call Now</button>
             </div>
-
-
-            
-
         </section>
+        <!-- My portfolio is start -->
+
+        <section class="my-portfolio">
+            <h2 class="mp-title h2">My Portfolio</h2> <br> <br>
+            <div class="portfolio-box">
+                <div class="box-detail">
+                    <img src="images/icons/Frame-1.png" alt="">
+                    <h2>Panda Commerce</h2>
+                    <p class="desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore facere vitae incidunt non eius iste, dolores nemo voluptas sequi modi!</p>
+                </div>
+                <div class="box-detail">
+                    <img src="images/icons/shelter.png" alt="">
+                    <h2>Web Developer</h2>
+                    <p class="desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore facere vitae incidunt non eius iste, dolores nemo voluptas sequi modi!</p>
+                </div>
+                <div class="box-detail">
+                    <img src="images/icons/food.png" alt="">
+                    <h2>Web Developer</h2>
+                    <p class="desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore facere vitae incidunt non eius iste, dolores nemo voluptas sequi modi!</p>
+                </div>
+            </div>   
+        </section>       
         <!-- Bottom section is start -->
         <section class="future">
             <div>
@@ -109,10 +128,11 @@
                 <input type="text" class="placeholder" placeholder="Enter your email"> <br>
                 <button class="btn-white bottom-btn">Subscribe</button>
             </div>
-        </section>
+        </section>    
     </main>
-    <footer>
-
+    <!-- footer section is start -->
+    <footer class="footer">
+        <small>Copyright © 2021 Yamin Saleh All Rights Reserved</small>
     </footer>
     
 </body>
