--- a/index.html
+++ b/index.html
@@ -76,13 +76,14 @@
             </div>
         </section>
         <!-- positive mindset is start -->
-        <section class="positive-mindset">
-            <div class="overlay"></div>
+        <section class="positive-mindset">    
             <div class="pm-text">
                 <h2 class=" h2
                 ">Awlays keep a positive <br> mindset</h2> <br>
                 <button class="btn-white">call Now</button>
+
             </div>
+            <div class="overlay"></div>
         </section>
         <!-- My portfolio is start -->
 
@@ -91,12 +92,12 @@
             <div class="portfolio-box">
                 <div class="box-detail">
                     <img src="images/icons/Frame-1.png" alt="">
-                    <h2>Panda Commerce</h2>
+                    <h2>Donate Today</h2>
                     <p class="desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore facere vitae incidunt non eius iste, dolores nemo voluptas sequi modi!</p>
                 </div>
                 <div class="box-detail">
                     <img src="images/icons/shelter.png" alt="">
-                    <h2>Web Developer</h2>
+                    <h2>Panda Commerce</h2>
                     <p class="desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore facere vitae incidunt non eius iste, dolores nemo voluptas sequi modi!</p>
                 </div>
                 <div class="box-detail">
