--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@100;300&display=swap" rel="stylesheet">
+
+    <script src="https://kit.fontawesome.com/656cf408c5.js" crossorigin="anonymous"></script>
     
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
@@ -91,17 +93,20 @@
             <h2 class="mp-title h2">My Portfolio</h2> <br> <br>
             <div class="portfolio-box">
                 <div class="box-detail">
-                    <img src="images/icons/Frame-1.png" alt="">
+                    <i class="fa-solid fa-hand-holding-medical"></i>
+                    <!-- <img src="images/icons/Frame-1.png" alt=""> -->
                     <h2>Donate Today</h2>
                     <p class="desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore facere vitae incidunt non eius iste, dolores nemo voluptas sequi modi!</p>
                 </div>
                 <div class="box-detail">
-                    <img src="images/icons/shelter.png" alt="">
+                    <i class="fa-sharp fa-solid fa-cart-shopping"></i>
+                    <!-- <img src="images/icons/shelter.png" alt=""> -->
                     <h2>Panda Commerce</h2>
                     <p class="desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore facere vitae incidunt non eius iste, dolores nemo voluptas sequi modi!</p>
                 </div>
                 <div class="box-detail">
-                    <img src="images/icons/food.png" alt="">
+                    <i class="fa-solid fa-code"></i>
+                    <!-- <img src="images/icons/food.png" alt=""> -->
                     <h2>Web Developer</h2>
                     <p class="desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore facere vitae incidunt non eius iste, dolores nemo voluptas sequi modi!</p>
                 </div>
